mejoras del tamaño de letra

--- a/islaDelColor/ingresarColor/styles.css
+++ b/islaDelColor/ingresarColor/styles.css
@@ -171,7 +171,7 @@ p {
 /* Botón estilo tesoro */
 button {
     padding:10px 20px;
-    margin: 20px;
+    margin: 10px;
     font-size: 16px;
     color:var(--blanco);
     background-color:var(--tesoro);
@@ -249,7 +249,7 @@ p {
     justify-content: center;  /*opcional: centra también verticalmente */
     border-radius: 8px;
     padding: 30px;
-    max-width: 250px;
+    max-width: 200px;
     margin: 2rem auto;        /* centra el contenedor en la página */
 }
 
@@ -283,11 +283,10 @@ label{
     gap:10px;            
 }
 
+#copy-palette-btn,
 button {
-    padding: 10px 20px;
-    margin: 20px auto;       /* centrado horizontal */
     display: block;          /* necesario para que auto funcione */
-    font-size: 16px;
+    font-size: 12px;
     color: var(--blanco);
     background-color: var(--tesoro);
     border-radius: 6px;
@@ -295,7 +294,13 @@ button {
     border: none;
     box-shadow: 3px 3px 0px var(--negro);
     transition: background-color 0.3s ease, transform 0.2s ease;
-    width: 70%;              /* ancho relativo al contenedor */
+    width: 80%;              /* ancho relativo al contenedor */
+    text-align: center;      /* centra el texto dentro del botón */
+}
+
+
+#copy-palette-btn{
+    margin-bottom:30px;
 }
 
   /* Contenedor principal más pequeño */
